tariffs page, anims

--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,209 @@
           <use xlink:href="./images/sprite.svg#smile"></use>
         </svg>
       </div>
-      <div class="sidebar__burger"></div>
+      <div class="sidebar__burger-wrapper">
+        <div class="sidebar__burger"></div>
+      </div>
       <div class="lang-switcher sidebar__lang-switcher">
         <select>
           <option value="Ru" selected>Ru</option>
           <option value="En">En</option>
         </select>
       </div>
+      <ul class="sidebar__menu">
+        <li><a href="#" target="_blank">Продукт</a>
+          <div class="sidebar__menu-inner">
+            <div class="sidebar__menu-content">
+              <div class="sidebar__menu-content-wrapper">
+                <ul>
+                  <li>Autofaq.ai</li>
+                  <li><a href="#" target="_blank">О сервисе</a></li>
+                  <li><a href="#" target="_blank">Кейсы внедрений</a></li>
+                  <li><a href="#" target="_blank">Тарифы</a></li>
+                </ul>
+                <ul>
+                  <li>Компоненты</li>
+                  <li><a href="#" target="_blank">Контактный чат-центр</a></li>
+                  <li><a href="#" target="_blank">Базы знаний</a></li>
+                  <li><a href="#" target="_blank">Чат-бот</a></li>
+                </ul>
+              </div>
+              <div class="sidebar__menu-content-wrapper sidebar__menu-content-wrapper--bottom">
+                <div class="sidebar__present">
+                  <div class="sidebar__present-caption">Презентация продукта</div>
+                  <div class="sidebar__present-image"><img src="images/present.png" alt=""></div>
+                  <div class="sidebar__present-text">
+                    <p>Краткий видеообзор основных возможностей Autofaq</p>
+                    <p><a href="#" target="_blank">Смотреть</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            </div>
+          </div>
+        </li>
+        <li><a href="#" target="_blank">Продукт</a>
+          <div class="sidebar__menu-inner">
+            <div class="sidebar__menu-content">
+              <div class="sidebar__menu-content-wrapper">
+                <ul>
+                  <li>Autofaq.ai</li>
+                  <li><a href="#" target="_blank">О сервисе</a></li>
+                  <li><a href="#" target="_blank">Кейсы внедрений</a></li>
+                  <li><a href="#" target="_blank">Тарифы</a></li>
+                </ul>
+                <ul>
+                  <li>Компоненты</li>
+                  <li><a href="#" target="_blank">Контактный чат-центр</a></li>
+                  <li><a href="#" target="_blank">Базы знаний</a></li>
+                  <li><a href="#" target="_blank">Чат-бот</a></li>
+                </ul>
+              </div>
+              <div class="sidebar__menu-content-wrapper sidebar__menu-content-wrapper--bottom">
+                <div class="sidebar__present">
+                  <div class="sidebar__present-caption">Презентация продукта</div>
+                  <div class="sidebar__present-image"><img src="images/present.png" alt=""></div>
+                  <div class="sidebar__present-text">
+                    <p>Краткий видеообзор основных возможностей Autofaq</p>
+                    <p><a href="#" target="_blank">Смотреть</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            </div>
+          </div>
+        </li>
+        <li><a href="#" target="_blank">Продукт</a>
+          <div class="sidebar__menu-inner">
+            <div class="sidebar__menu-content">
+              <div class="sidebar__menu-content-wrapper">
+                <ul>
+                  <li>Autofaq.ai</li>
+                  <li><a href="#" target="_blank">О сервисе</a></li>
+                  <li><a href="#" target="_blank">Кейсы внедрений</a></li>
+                  <li><a href="#" target="_blank">Тарифы</a></li>
+                </ul>
+                <ul>
+                  <li>Компоненты</li>
+                  <li><a href="#" target="_blank">Контактный чат-центр</a></li>
+                  <li><a href="#" target="_blank">Базы знаний</a></li>
+                  <li><a href="#" target="_blank">Чат-бот</a></li>
+                </ul>
+              </div>
+              <div class="sidebar__menu-content-wrapper sidebar__menu-content-wrapper--bottom">
+                <div class="sidebar__present">
+                  <div class="sidebar__present-caption">Презентация продукта</div>
+                  <div class="sidebar__present-image"><img src="images/present.png" alt=""></div>
+                  <div class="sidebar__present-text">
+                    <p>Краткий видеообзор основных возможностей Autofaq</p>
+                    <p><a href="#" target="_blank">Смотреть</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            </div>
+          </div>
+        </li>
+        <li><a href="#" target="_blank">Продукт</a>
+          <div class="sidebar__menu-inner">
+            <div class="sidebar__menu-content">
+              <div class="sidebar__menu-content-wrapper">
+                <ul>
+                  <li>Autofaq.ai</li>
+                  <li><a href="#" target="_blank">О сервисе</a></li>
+                  <li><a href="#" target="_blank">Кейсы внедрений</a></li>
+                  <li><a href="#" target="_blank">Тарифы</a></li>
+                </ul>
+                <ul>
+                  <li>Компоненты</li>
+                  <li><a href="#" target="_blank">Контактный чат-центр</a></li>
+                  <li><a href="#" target="_blank">Базы знаний</a></li>
+                  <li><a href="#" target="_blank">Чат-бот</a></li>
+                </ul>
+              </div>
+              <div class="sidebar__menu-content-wrapper sidebar__menu-content-wrapper--bottom">
+                <div class="sidebar__present">
+                  <div class="sidebar__present-caption">Презентация продукта</div>
+                  <div class="sidebar__present-image"><img src="images/present.png" alt=""></div>
+                  <div class="sidebar__present-text">
+                    <p>Краткий видеообзор основных возможностей Autofaq</p>
+                    <p><a href="#" target="_blank">Смотреть</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            </div>
+          </div>
+        </li>
+        <li><a href="#" target="_blank">Продукт</a>
+          <div class="sidebar__menu-inner">
+            <div class="sidebar__menu-content">
+              <div class="sidebar__menu-content-wrapper">
+                <ul>
+                  <li>Autofaq.ai</li>
+                  <li><a href="#" target="_blank">О сервисе</a></li>
+                  <li><a href="#" target="_blank">Кейсы внедрений</a></li>
+                  <li><a href="#" target="_blank">Тарифы</a></li>
+                </ul>
+                <ul>
+                  <li>Компоненты</li>
+                  <li><a href="#" target="_blank">Контактный чат-центр</a></li>
+                  <li><a href="#" target="_blank">Базы знаний</a></li>
+                  <li><a href="#" target="_blank">Чат-бот</a></li>
+                </ul>
+              </div>
+              <div class="sidebar__menu-content-wrapper sidebar__menu-content-wrapper--bottom">
+                <div class="sidebar__present">
+                  <div class="sidebar__present-caption">Презентация продукта</div>
+                  <div class="sidebar__present-image"><img src="images/present.png" alt=""></div>
+                  <div class="sidebar__present-text">
+                    <p>Краткий видеообзор основных возможностей Autofaq</p>
+                    <p><a href="#" target="_blank">Смотреть</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            </div>
+          </div>
+        </li>
+        <li><a href="#" target="_blank">Продукт</a>
+          <div class="sidebar__menu-inner">
+            <div class="sidebar__menu-content">
+              <div class="sidebar__menu-content-wrapper">
+                <ul>
+                  <li>Autofaq.ai</li>
+                  <li><a href="#" target="_blank">О сервисе</a></li>
+                  <li><a href="#" target="_blank">Кейсы внедрений</a></li>
+                  <li><a href="#" target="_blank">Тарифы</a></li>
+                </ul>
+                <ul>
+                  <li>Компоненты</li>
+                  <li><a href="#" target="_blank">Контактный чат-центр</a></li>
+                  <li><a href="#" target="_blank">Базы знаний</a></li>
+                  <li><a href="#" target="_blank">Чат-бот</a></li>
+                </ul>
+              </div>
+              <div class="sidebar__menu-content-wrapper sidebar__menu-content-wrapper--bottom">
+                <div class="sidebar__present">
+                  <div class="sidebar__present-caption">Презентация продукта</div>
+                  <div class="sidebar__present-image"><img src="images/present.png" alt=""></div>
+                  <div class="sidebar__present-text">
+                    <p>Краткий видеообзор основных возможностей Autofaq</p>
+                    <p><a href="#" target="_blank">Смотреть</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sidebar__menu-image"><img src="images/bg-menu.jpg" alt=""><a class="button button--green sidebar__request-btn" href="#"><span>Оставить заявку</span></a>
+            </div>
+          </div>
+        </li>
+      </ul>
     </aside>
     <header class="header">
       <div class="container header__container">
@@ -62,7 +258,7 @@
       <section class="brands">
         <div class="container brands__container">
           <div class="topic brands__topic">лидеры рынка</div>
-          <div class="brands__text active">Лидеры рынка уже делают клиентский сервис лучше</div>
+          <div class="brands__text">Лидеры рынка уже делают клиентский сервис лучше</div>
           <div class="brands__text brands__text--right">А команду эффективнее <br> с Autofaq</div>
         </div>
         <div class="brands__marquee brands__marquee--mt js-marquee-1">
@@ -225,7 +421,11 @@
         </div>
       </section>
       <section class="clients">
-        <div class="clients__bg"></div>
+        <div class="clients__bg">
+          <div class="clients__title">
+            <p><span>Client</span> stories</p>
+          </div>
+        </div>
         <div class="clients__grid">
           <div class="clients__col">
             <div class="clients-card clients__item">
