--- a/public/cases.html
+++ b/public/cases.html
@@ -57,7 +57,7 @@
             </div>
           </div>
         </li>
-        <li><a href="#" target="_blank">Продукт</a>
+        <li><a href="#" target="_blank">Решения</a>
           <div class="sidebar__menu-inner">
             <div class="sidebar__menu-content">
               <div class="sidebar__menu-content-wrapper">
@@ -89,7 +89,7 @@
             </div>
           </div>
         </li>
-        <li><a href="#" target="_blank">Продукт</a>
+        <li><a href="#" target="_blank">Кейсы</a>
           <div class="sidebar__menu-inner">
             <div class="sidebar__menu-content">
               <div class="sidebar__menu-content-wrapper">
@@ -121,7 +121,7 @@
             </div>
           </div>
         </li>
-        <li><a href="#" target="_blank">Продукт</a>
+        <li><a href="#" target="_blank">Тарифы</a>
           <div class="sidebar__menu-inner">
             <div class="sidebar__menu-content">
               <div class="sidebar__menu-content-wrapper">
@@ -153,7 +153,7 @@
             </div>
           </div>
         </li>
-        <li><a href="#" target="_blank">Продукт</a>
+        <li><a href="#" target="_blank">Ресурсы</a>
           <div class="sidebar__menu-inner">
             <div class="sidebar__menu-content">
               <div class="sidebar__menu-content-wrapper">
@@ -185,7 +185,7 @@
             </div>
           </div>
         </li>
-        <li><a href="#" target="_blank">Продукт</a>
+        <li><a href="#" target="_blank">Компания</a>
           <div class="sidebar__menu-inner">
             <div class="sidebar__menu-content">
               <div class="sidebar__menu-content-wrapper">
