services text upd

--- a/public/index.html
+++ b/public/index.html
@@ -321,20 +321,17 @@
           </div>
           <div class="services__tabs-item"><span>IT-поддержка</span>
             <div class="services__mobile-wrapper">
-              <div class="services__text">
-                Autofaq заберет 70% общения на естественном языке, чтобы ваши клиенты о ставались довольными, без увеличения ФОТ на поддержку</div><img src="images/services/2.png" srcset="images/services/2@2x.png 2x" alt="">
+              <div class="services__text">Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата</div><img src="images/services/2.png" srcset="images/services/2@2x.png 2x" alt="">
             </div>
           </div>
           <div class="services__tabs-item"><span>HR-поддержка</span>
             <div class="services__mobile-wrapper">
-              <div class="services__text">
-                Autofaq заберет 70% общения на естественном языке, чтобы ваши клиенты о ставались довольными, без увеличения ФОТ на поддержку</div><img src="images/services/2.png" srcset="images/services/2@2x.png 2x" alt="">
+              <div class="services__text">Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата</div><img src="images/services/2.png" srcset="images/services/2@2x.png 2x" alt="">
             </div>
           </div>
           <div class="services__tabs-item"><span>Клиентская поддержка</span>
             <div class="services__mobile-wrapper">
-              <div class="services__text">
-                Autofaq заберет 70% общения на естественном языке, чтобы ваши клиенты о ставались довольными, без увеличения ФОТ на поддержку</div><img src="images/services/2.png" srcset="images/services/2@2x.png 2x" alt="">
+              <div class="services__text">Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата</div><img src="images/services/2.png" srcset="images/services/2@2x.png 2x" alt="">
             </div>
           </div>
         </div>
@@ -347,24 +344,21 @@
             </div>
           </div>
           <div class="services__content-item">
-            <div class="services__title"><span>Поддержка розничной сети,</span> проектных команд</div>
+            <div class="services__title">IT-поддержка</div>
             <div class="services__bottom">
-              <div class="services__text">
-                Autofaq заберет 70% общения на естественном языке, чтобы ваши клиенты о ставались довольными, без увеличения ФОТ на поддержку</div><a class="button services__btn" href="#"><span>подробнее</span></a>
+              <div class="services__text">Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата</div><a class="button services__btn" href="#"><span>подробнее</span></a>
             </div>
           </div>
           <div class="services__content-item">
-            <div class="services__title"><span>Поддержка розничной сети,</span> проектных команд</div>
+            <div class="services__title">HR-поддержка</div>
             <div class="services__bottom">
-              <div class="services__text">
-                Autofaq заберет 70% общения на естественном языке, чтобы ваши клиенты о ставались довольными, без увеличения ФОТ на поддержку</div><a class="button services__btn" href="#"><span>подробнее</span></a>
+              <div class="services__text">Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата</div><a class="button services__btn" href="#"><span>подробнее</span></a>
             </div>
           </div>
           <div class="services__content-item">
-            <div class="services__title"><span>Поддержка розничной сети,</span> проектных команд</div>
+            <div class="services__title">Клиентская поддержка</div>
             <div class="services__bottom">
-              <div class="services__text">
-                Autofaq заберет 70% общения на естественном языке, чтобы ваши клиенты о ставались довольными, без увеличения ФОТ на поддержку</div><a class="button services__btn" href="#"><span>подробнее</span></a>
+              <div class="services__text">Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата</div><a class="button services__btn" href="#"><span>подробнее</span></a>
             </div>
           </div>
         </div>
