--- a/public/index.html
+++ b/public/index.html
@@ -843,11 +843,12 @@
           <div class="benefits__title">Benefits</div>
         </div>
         <div class="benefits__wrapper">
-          <button class="benefits__btn">
+          <div class="benefits__btn">
             <svg width="16" height="16">
               <use xlink:href="./images/sprite.svg#refresh"></use>
             </svg>
-          </button>
+            <div class="benefits__progress"></div>
+          </div>
           <div class="benefits__col">
             <div class="benefits__accordion">
               <div class="benefits__accordion-item active">
@@ -914,12 +915,12 @@
           </div>
           <div class="calculate__middle">
             <div class="calculate__calc">
-              <div class="calculate__calc-item"><span class="active">Клиентская поддержка
-                  <button>
-                    <svg width="10" height="6">
-                      <use xlink:href="./images/sprite.svg#chevron-down"></use>
-                    </svg>
-                  </button></span></div>
+              <div class="calculate__calc-item">
+                <select class="js-calculate-select">
+                  <option value="Клиентская поддержка">Клиентская поддержка</option>
+                  <option value="Клиентская поддержка 2">Клиентская поддержка 2</option>
+                </select>
+              </div>
               <div class="calculate__calc-item"><span>Сотрудников на поддержке</span>
                 <div class="range-value">50</div>
                 <input type="range" min="0" max="50" value="50" step="1">
@@ -1067,18 +1068,21 @@
         </div>
       </section>
       <section class="forecast">
-        <div class="forecast__wrapper"><span class="forecast__marquee">Get in touch</span><a class="button button--green forecast__request" href="#"><span>оставить заявку</span></a>
+        <div class="forecast__wrapper"><span class="forecast__marquee forecast__marquee--dark">Get in touch</span><a class="button button--green forecast__request" href="#"><span>оставить заявку</span></a>
           <div class="forecast__col">
             <div class="topic forecast__topic">прогноз</div>
+            <div class="forecast__diag"></div><span class="forecast__marquee">Get in touch</span>
           </div>
           <div class="forecast__col">
             <div class="forecast__text">Рост удовлетворённости клиентов всего на 10-20% может дать рост годовой выручки до 30%</div>
+            <div class="forecast__diag"></div>
           </div>
           <div class="forecast__col">
             <div class="forecast__percent">
               <p>30%</p>
               <p>Рост выручки <br> за год</p>
             </div>
+            <div class="forecast__diag"></div>
           </div>
         </div>
         <div class="forecast__wrapper forecast__wrapper--mobile">
