--- a/public/cases.html
+++ b/public/cases.html
@@ -245,7 +245,7 @@
         </div>
         <div class="cases__grid">
           <div class="clients__col">
-            <div class="clients-card cases__item">
+            <div class="clients-card clients-card--simple cases__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Фосагро</div>
                 <div class="clients-card__client-logo">
@@ -258,25 +258,14 @@
                 </div>
                 <div class="clients-card__inner">
                   <div class="clients-card__top">
-                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                     <div class="clients-card__icon">
-                      <svg width="62" height="102">
-                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
+                      <svg width="221" height="69">
+                        <use xlink:href="./images/sprite.svg#rostelekom-3"></use>
                       </svg>
                     </div>
                   </div>
                   <div class="clients-card__middle">
-                    <div class="clients-card__person">
-                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
-                      <div class="clients-card__author">
-                        <p>Михаил Осеевский</p>
-                        <p>CEO</p>
-                      </div>
-                    </div>
-                    <div class="clients-card__comment">
-                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
-                    </div>
+                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                   </div>
                   <div class="clients-card__bottom">
                     <div class="clients-card__bottom-item">
@@ -291,7 +280,7 @@
                 </div>
               </div>
             </div>
-            <div class="clients-card cases__item">
+            <div class="clients-card clients-card--simple cases__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Фосагро</div>
                 <div class="clients-card__client-logo">
@@ -304,25 +293,14 @@
                 </div>
                 <div class="clients-card__inner">
                   <div class="clients-card__top">
-                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                     <div class="clients-card__icon">
-                      <svg width="62" height="102">
-                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
+                      <svg width="221" height="69">
+                        <use xlink:href="./images/sprite.svg#rostelekom-3"></use>
                       </svg>
                     </div>
                   </div>
                   <div class="clients-card__middle">
-                    <div class="clients-card__person">
-                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
-                      <div class="clients-card__author">
-                        <p>Михаил Осеевский</p>
-                        <p>CEO</p>
-                      </div>
-                    </div>
-                    <div class="clients-card__comment">
-                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
-                    </div>
+                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                   </div>
                   <div class="clients-card__bottom">
                     <div class="clients-card__bottom-item">
@@ -337,7 +315,7 @@
                 </div>
               </div>
             </div>
-            <div class="clients-card cases__item">
+            <div class="clients-card clients-card--simple cases__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Мегафон</div>
                 <div class="clients-card__client-logo">
@@ -350,25 +328,14 @@
                 </div>
                 <div class="clients-card__inner">
                   <div class="clients-card__top">
-                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                     <div class="clients-card__icon">
-                      <svg width="62" height="102">
-                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
+                      <svg width="221" height="69">
+                        <use xlink:href="./images/sprite.svg#rostelekom-3"></use>
                       </svg>
                     </div>
                   </div>
                   <div class="clients-card__middle">
-                    <div class="clients-card__person">
-                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
-                      <div class="clients-card__author">
-                        <p>Михаил Осеевский</p>
-                        <p>CEO</p>
-                      </div>
-                    </div>
-                    <div class="clients-card__comment">
-                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
-                    </div>
+                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                   </div>
                   <div class="clients-card__bottom">
                     <div class="clients-card__bottom-item">
@@ -385,7 +352,7 @@
             </div>
           </div>
           <div class="clients__col">
-            <div class="clients-card cases__item">
+            <div class="clients-card clients-card--simple cases__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">PWC</div>
                 <div class="clients-card__client-logo">
@@ -398,25 +365,14 @@
                 </div>
                 <div class="clients-card__inner">
                   <div class="clients-card__top">
-                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                     <div class="clients-card__icon">
-                      <svg width="62" height="102">
-                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
+                      <svg width="221" height="69">
+                        <use xlink:href="./images/sprite.svg#rostelekom-3"></use>
                       </svg>
                     </div>
                   </div>
                   <div class="clients-card__middle">
-                    <div class="clients-card__person">
-                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
-                      <div class="clients-card__author">
-                        <p>Михаил Осеевский</p>
-                        <p>CEO</p>
-                      </div>
-                    </div>
-                    <div class="clients-card__comment">
-                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
-                    </div>
+                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                   </div>
                   <div class="clients-card__bottom">
                     <div class="clients-card__bottom-item">
@@ -431,7 +387,7 @@
                 </div>
               </div>
             </div>
-            <div class="clients-card cases__item">
+            <div class="clients-card clients-card--simple cases__item">
               <div class="clients-card__client">
                 <div class="clients-card__client-name">Сколково</div>
                 <div class="clients-card__client-logo">
@@ -444,25 +400,14 @@
                 </div>
                 <div class="clients-card__inner">
                   <div class="clients-card__top">
-                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                     <div class="clients-card__icon">
-                      <svg width="62" height="102">
-                        <use xlink:href="./images/sprite.svg#rostelekom-2"></use>
+                      <svg width="221" height="69">
+                        <use xlink:href="./images/sprite.svg#rostelekom-3"></use>
                       </svg>
                     </div>
                   </div>
                   <div class="clients-card__middle">
-                    <div class="clients-card__person">
-                      <div class="clients-card__avatar"><img src="images/clients/1.jpg" srcset="images/clients/1@2x.jpg 2x" alt=""></div>
-                      <div class="clients-card__author">
-                        <p>Михаил Осеевский</p>
-                        <p>CEO</p>
-                      </div>
-                    </div>
-                    <div class="clients-card__comment">
-                      «Внедрение Autofaq в наши процессы позволио освободить от рутины более половины состава техподдержки, а также существенно улучшить NPS. Как известно, это единственный
-                       показатель, за которым надо следить, чтобы бизнес рос уверенно и быстро»
-                    </div>
+                    <div class="clients-card__title"><span>Клиентская техническая поддержка</span> B2B и B2C сервисов</div>
                   </div>
                   <div class="clients-card__bottom">
                     <div class="clients-card__bottom-item">
