--- a/public/index.html
+++ b/public/index.html
@@ -1068,21 +1068,21 @@
         </div>
       </section>
       <section class="forecast">
-        <div class="forecast__wrapper"><span class="forecast__marquee forecast__marquee--dark">Get in touch</span><a class="button button--green forecast__request" href="#"><span>оставить заявку</span></a>
-          <div class="forecast__col">
+        <div class="forecast__wrapper"><a class="button button--green forecast__request" href="#"><span>оставить заявку</span></a>
+          <div class="forecast__col" style="z-index: 2">
             <div class="topic forecast__topic">прогноз</div>
-            <div class="forecast__diag"></div><span class="forecast__marquee">Get in touch</span>
+            <div class="forecast__diag"></div><span class="forecast__marquee forecast__marquee--dark">Get in touch</span>
           </div>
-          <div class="forecast__col">
+          <div class="forecast__col" style="z-index: 1">
             <div class="forecast__text">Рост удовлетворённости клиентов всего на 10-20% может дать рост годовой выручки до 30%</div>
-            <div class="forecast__diag"></div>
+            <div class="forecast__diag"></div><span class="forecast__marquee forecast__marquee--white-1">Get in touch</span>
           </div>
           <div class="forecast__col">
             <div class="forecast__percent">
               <p>30%</p>
               <p>Рост выручки <br> за год</p>
             </div>
-            <div class="forecast__diag"></div>
+            <div class="forecast__diag forecast__diag--zi"></div><span class="forecast__marquee forecast__marquee--white-2">Get in touch</span>
           </div>
         </div>
         <div class="forecast__wrapper forecast__wrapper--mobile">
