--- a/public/index.html
+++ b/public/index.html
@@ -336,7 +336,7 @@
           </div>
         </div>
         <div class="services__content" style="background-image: url(&quot;images/services/1.png&quot;)">
-          <div class="services__content-item" style="display: flex">
+          <div class="services__content-item active">
             <div class="services__title"><span>Поддержка розничной сети,</span> проектных команд</div>
             <div class="services__bottom">
               <div class="services__text">
@@ -695,7 +695,7 @@
           <div class="about-card__bg"><img src="images/about-card/1.png" srcset="images/about-card/1@2x.png 2x" alt=""></div>
           <div class="about-card__text"><p>AutoFAQ разработан для крупных и <br> средних компаний с учетом необходимых требований к безопасности, отказоустойчивости, возможности <br> облачного и on-premise развертывания, а <br> также горизонтального и вертикального масштабирования.</p><p>Интеллектуальное ядро предоставляет <br> ответы в течение 200 мс и адаптировано <br> под высоконагруженную клиентскую <br> поддержку массовых B2C сервисов с миллионами обращений в месяц.</p></div>
         </div>
-        <div class="about-card about-card--blue about__item">
+        <div class="about-card about-card--blue about__item" data-speed="15">
           <div class="about-card__top">
             <div class="about-card__title">Безграничные <span>возможности интеграций</span></div>
             <div class="about-card__topic">настройка</div>
