--- a/public/news-page.html
+++ b/public/news-page.html
@@ -245,7 +245,7 @@
               <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
               <div class="news-card__content">
                 <div class="news-card__top">
-                  <div class="news-card__day">20</div>
+                  <div class="news-card__day">23</div>
                   <div>
                     <div class="news-card__month">января</div>
                     <div class="news-card__year">2022</div>
@@ -255,10 +255,10 @@
               </div>
             </figure></a><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
             <figure>
-              <div class="news-card__bg"><img src="images/news-card/2.jpg" srcset="images/news-card/2@2x.jpg 2x" alt=""></div>
+              <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
               <div class="news-card__content">
                 <div class="news-card__top">
-                  <div class="news-card__day">05</div>
+                  <div class="news-card__day">23</div>
                   <div>
                     <div class="news-card__month">января</div>
                     <div class="news-card__year">2022</div>
@@ -268,29 +268,81 @@
               </div>
             </figure></a><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
             <figure>
-              <div class="news-card__bg"><img src="images/news-card/3.jpg" srcset="images/news-card/3@2x.jpg 2x" alt=""></div>
+              <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
               <div class="news-card__content">
                 <div class="news-card__top">
-                  <div class="news-card__day">10</div>
+                  <div class="news-card__day">23</div>
                   <div>
                     <div class="news-card__month">января</div>
                     <div class="news-card__year">2022</div>
                   </div>
                 </div>
-                <div class="news-card__text">Ритейлер «М.видео-Эльдорадо» построил нейросеть для ответов на вопросы покупателей</div>
+                <div class="news-card__text">Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно</div>
               </div>
             </figure></a><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
             <figure>
-              <div class="news-card__bg"><img src="images/news-card/4.jpg" srcset="images/news-card/4@2x.jpg 2x" alt=""></div>
+              <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
               <div class="news-card__content">
                 <div class="news-card__top">
-                  <div class="news-card__day">31</div>
+                  <div class="news-card__day">23</div>
                   <div>
                     <div class="news-card__month">января</div>
                     <div class="news-card__year">2022</div>
                   </div>
                 </div>
-                <div class="news-card__text">Сколько километров до Марса и как поймать сову?</div>
+                <div class="news-card__text">Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно</div>
+              </div>
+            </figure></a><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
+            <figure>
+              <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
+              <div class="news-card__content">
+                <div class="news-card__top">
+                  <div class="news-card__day">23</div>
+                  <div>
+                    <div class="news-card__month">января</div>
+                    <div class="news-card__year">2022</div>
+                  </div>
+                </div>
+                <div class="news-card__text">Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно</div>
+              </div>
+            </figure></a><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
+            <figure>
+              <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
+              <div class="news-card__content">
+                <div class="news-card__top">
+                  <div class="news-card__day">23</div>
+                  <div>
+                    <div class="news-card__month">января</div>
+                    <div class="news-card__year">2022</div>
+                  </div>
+                </div>
+                <div class="news-card__text">Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно</div>
+              </div>
+            </figure></a><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
+            <figure>
+              <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
+              <div class="news-card__content">
+                <div class="news-card__top">
+                  <div class="news-card__day">23</div>
+                  <div>
+                    <div class="news-card__month">января</div>
+                    <div class="news-card__year">2022</div>
+                  </div>
+                </div>
+                <div class="news-card__text">Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно</div>
+              </div>
+            </figure></a><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
+            <figure>
+              <div class="news-card__bg"><img src="images/news-card/1.jpg" srcset="images/news-card/1@2x.jpg 2x" alt=""></div>
+              <div class="news-card__content">
+                <div class="news-card__top">
+                  <div class="news-card__day">23</div>
+                  <div>
+                    <div class="news-card__month">января</div>
+                    <div class="news-card__year">2022</div>
+                  </div>
+                </div>
+                <div class="news-card__text">Новый сотрудник PwC Ботя спасает от хаоса данных и решает тысячи вопросов ежегодно</div>
               </div>
             </figure></a>
         </div>
