--- a/public/cases.html
+++ b/public/cases.html
@@ -239,7 +239,7 @@
       <article class="cases">
         <div class="container">
           <div class="cases__full-screen">
-            <div class="cases__title">Сases</div>
+            <h1 class="cases__title">Сases</h1>
             <div class="cases__text"><span>Наши клиенты – смелые инноваторы,</span> лидеры рынка в своих нишах</div>
           </div>
         </div>
