--- a/public/index.html
+++ b/public/index.html
@@ -922,26 +922,26 @@
                 </select>
               </div>
               <div class="calculate__calc-item"><span>Сотрудников на поддержке</span>
-                <div class="range-value">50</div>
-                <input type="range" min="0" max="50" value="50" step="1">
+                <div class="range-value">100</div>
+                <input id="range-1" type="range" min="0" max="100" value="100" step="1">
               </div>
               <div class="calculate__calc-item"><span>Обращений в месяц</span>
-                <div class="range-value">50</div>
-                <input type="range" min="0" max="50" value="50" step="1">
+                <div class="range-value range-value--small">выше 100 тыс.</div>
+                <input id="range-2" type="range" min="10000" max="110000" value="110000" step="10000">
               </div>
             </div><a class="button button--green calculate__request" href="#"><span>оставить заявку</span></a>
           </div>
           <div class="calculate__result">
             <div class="calculate__result-item">
-              <p><span class="result-1">20</span>+</p>
+              <p><span id="result-1">60</span>+</p>
               <p>Миллионово экономии в год <br> на ФОТ</p>
             </div>
             <div class="calculate__result-item">
-              <p>x<span class="result-2">3</span></p>
+              <p>x3</p>
               <p>Рост эффективности HelpDesk</p>
             </div>
             <div class="calculate__result-item">
-              <p><span class="result-3">337</span>%</p>
+              <p><span id="result-2">1000</span>%</p>
               <p>ROI за год</p>
             </div>
           </div><a class="button button--green calculate__request calculate__request--mobile" href="#"><span>оставить заявку</span></a>
