--- a/public/news-page.html
+++ b/public/news-page.html
@@ -238,7 +238,7 @@
     <main class="main">
       <article class="news-page">
         <div class="container news-page__container">
-          <div class="news-page__title">Новости</div>
+          <h1 class="news-page__title">Новости</h1>
         </div>
         <div class="news-page__wrapper"><a class="news-card swiper-slide news-page__item" href="#" target="_blank">
             <figure>
