--- a/public/news-single-2.html
+++ b/public/news-single-2.html
@@ -250,7 +250,7 @@
         </div>
         <div class="news-single__top">
           <div class="container">
-            <div class="news-single__title"><span>Лидеры рынка уже делают</span> клиентский сервис лучше</div>
+            <h1 class="news-single__title"><span>Лидеры рынка уже делают</span> клиентский сервис лучше</h1>
           </div>
         </div>
         <div class="container">
