--- a/public/tariffs.html
+++ b/public/tariffs.html
@@ -238,7 +238,7 @@
     <main class="main">
       <article class="tariffs">
         <div class="container">
-          <div class="tariffs__title">Tariffs</div>
+          <h1 class="tariffs__title">Tariffs</h1>
         </div>
         <div class="tariffs__wrapper">
           <div class="tariffs__col">
