--- a/public/cases-single.html
+++ b/public/cases-single.html
@@ -239,7 +239,7 @@
       <article class="cases-single">
         <div class="cases-single__top">
           <div class="container">
-            <div class="cases-single__title">585 Золотой</div>
+            <h1 class="cases-single__title">585 Золотой</h1>
             <div class="cases-single__sibtitle">Кейс компании</div>
           </div>
         </div>
