--- a/public/news-single.html
+++ b/public/news-single.html
@@ -239,7 +239,7 @@
       <article class="news-single">
         <div class="news-single__top">
           <div class="container">
-            <div class="news-single__title"><span>Лидеры рынка уже делают</span> клиентский сервис лучше</div>
+            <h1 class="news-single__title"><span>Лидеры рынка уже делают</span> клиентский сервис лучше</h1>
           </div>
         </div>
         <div class="container">
